--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,6 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:horizontal {
   display: none;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
