--- a/src/app/common/components/sidenav/sidenav.component.css
+++ b/src/app/common/components/sidenav/sidenav.component.css
@@ -1,3 +1,5 @@
+
+
 .sidenav {
   height: 100%;
   width: 20vw;
@@ -5,7 +7,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #bab0b0;
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -14,16 +16,13 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 1.2em;
-  color: #818181;
+  color: #000000;
   display: block;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
 }
 
 .sidenav ul {
   padding: 0;
+  transition: 3s;
 }
 
 .sidenav ul li {
@@ -34,14 +33,9 @@
   padding-left: 50px;
 }
 
-.main-content {
-  margin-left: 200px; /* Same width as the sidebar */
-  padding: 20px;
-}
-
 .active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #13aad8;
+  transition: .3s;
 }
 
 button {
