feat: add icon mih

--- a/src/app/common/components/sidenav/sidenav.component.html
+++ b/src/app/common/components/sidenav/sidenav.component.html
@@ -3,6 +3,7 @@
 </button>
 
 <div class="sidenav" [ngClass]="{ 'sidenav-hidden': sidenavHidden }">
+  <img src="../../../../assets/icons/mih.png" alt="" style="width: 6em;">
   <ng-container *ngFor="let route of sidenavRoutes; let i = index">
     <a
       *ngIf="!route.children"
