--- a/src/app/common/components/sidenav/sidenav.component.css
+++ b/src/app/common/components/sidenav/sidenav.component.css
@@ -7,9 +7,10 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #bab0b0;
+  background-color: #e2e2e2;
   overflow-x: hidden;
   padding-top: 20px;
+  transition: 3s;
 }
 
 .sidenav a {
