--- a/src/app/common/components/sidenav/sidenav.component.css
+++ b/src/app/common/components/sidenav/sidenav.component.css
@@ -1,4 +1,4 @@
-
+/* sidenav */
 
 .sidenav {
   height: 100%;
@@ -7,18 +7,34 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #e2e2e2;
+  background-color: var(--blue);
   overflow-x: hidden;
   padding-top: 20px;
-  transition: 3s;
 }
 
+/* logo-container */
+
+.logo-container {
+  width: 100%;
+  padding: 2em 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidenav-logo {
+  width: 7em;
+}
+
+/* ng-template sidenavRoutes */
+
 .sidenav a {
-  padding: 8px 8px 8px 32px;
+  padding: .7em 1.3em;
   text-decoration: none;
   font-size: 1.2em;
-  color: #000000;
+  color: var(--white);
   display: block;
+  cursor: pointer;
 }
 
 .sidenav ul {
@@ -35,7 +51,7 @@
 }
 
 .active {
-  background-color: #13aad8;
+  background-color: var(--blue_selected);
   transition: .3s;
 }
 
