feat: radio styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-sidenav (routeChange)="onRouteChange($event)"></app-sidenav>
 
-<div style="width: 100vw; display: flex; justify-content: flex-end;">
-  {{currentView}}
-</div>
+<main>
+  <div *ngIf="this.currentView == 'Radio'">
+    <app-radio></app-radio>
+  </div>
+</main>
+
