--- a/src/app/radio/radio.component.html
+++ b/src/app/radio/radio.component.html
@@ -1,11 +1,27 @@
-<body>
-  <main>
-    <div class="radio-container">
-      <iframe class="radio-iframe" src="https://player.radioking.io/make-it-happen1/?c=%23000000&c2=%23ffffff&f=h&i=0&p=0&s=0&li=0&popup=0&plc=NaN&h=undefined&l=470&v=2" frameborder="0"></iframe>
-      <p class="radio-text">La radio que alimenta tu alma 🎶<i class="fa fa-music"></i></p>
-    </div>
-    <div class="microphone-container">
-      <img class="microphone-icon" src="../../../../assets/icons/microphone.png" alt="microphone">
-    </div>
-  </main>
-</body>
+<div class="radio-container">
+  <iframe
+    class="radio-iframe"
+    src="https://player.radioking.io/make-it-happen1/?c=%23000000&c2=%23ffffff&f=h&i=0&p=0&s=0&li=0&popup=0&plc=NaN&h=undefined&l=470&v=2"
+    frameborder="0"
+  ></iframe>
+</div>
+<div class="speaker-container">
+  <div style="display: flex; align-items: center; margin-top: 4vw;">
+    <img
+    class="speaker-icon"
+    src="../../assets/persons/josue_guedez.jpg"
+    alt="microphone"
+  />
+  <div class="speaker-description-container">
+    <p class="speaker-text"><i>Estas escuchando a</i> </p>
+    <p class="speaker-name">Josue Hoenicka</p>
+    <p class="speaker-country">Santa Fe, Argentina</p>
+  </div>
+  </div>
+
+  <img
+    class="radio-icon"
+    src="../../../../assets/icons/microphone.png"
+    alt="microphone"
+  />
+</div>
