--- a/src/styles.css
+++ b/src/styles.css
@@ -21,8 +21,8 @@
   --green: #09843c;
   --yellow: #ffe970;
   --orange: #ffba61;
-  --blue: #3058b8;
-  --blue_selected: #002781;
+  --blue: #0b3aa7;
+  --blue_selected: #032575;
 }
 
 * {
