--- a/src/app/common/components/quiz/quiz.css
+++ b/src/app/common/components/quiz/quiz.css
@@ -1,25 +1,72 @@
 .container {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  margin-top: 50px;
+  justify-content: center;
+  height: 100vh;
 }
 
-button {
-  margin: 10px;
-  padding: 5px 10px;
-  background-color: #007bff;
-  color: white;
+.option-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.welcome-title {
+  font-size: 3em;
+}
+
+.description-title {
+  margin: .5em 0;
+  font-size: 1.5em;
+}
+
+.quantity-title {
+  margin: .5em 0;
+  font-size: 1.3em;
+}
+
+.question-title {
+  margin: 1em 0;
+  font-size: 2.3em;
+}
+
+.response-title {
+  margin: 1em;
+  font-size: 1.3em;
+}
+
+.welcome-button, .result-button {
+  font-size: 1.5em;
+  margin: 1em 0;
+  padding: .5em 1em;
+  border-radius: 2em;
+  background-color: var(--blue);
+  color: var(--white);
   border: none;
   cursor: pointer;
+  transition: .3s;
 }
 
-button:hover {
-  background-color: #0056b3;
+.welcome-button:hover {
+  background-color: var(--blue_selected);
+}
+
+.option-button {
+  font-size: 1.5em;
+  margin: 1em;
+  padding: .5em 1em;
+  border-radius: 2em;
+  background-color: var(--gray);
+  color: var(--black);
+  border: none;
+  cursor: pointer;
+  transition: .3s;
 }
 
 .correct {
-  color: green;
+  background-color: var(--green);
 }
 
 .incorrect {
-  color: red;
+  background-color: var(--red);
 }
