--- a/src/app/common/components/quiz/quiz.html
+++ b/src/app/common/components/quiz/quiz.html
@@ -1,17 +1,46 @@
 <div class="container">
-  <h1>¡Bienvenido al Juego Bíblico!</h1>
+  <h1 *ngIf="!gameStarted" class="welcome-title">
+    ¡Bienvenido al Quiz Bíblico!
+  </h1>
+  <p *ngIf="!gameStarted" class="description-title">
+    Responde correctamente 30 preguntas bíblicas del
+    <b>Antiguo Testamento</b>
+  </p>
   <div *ngIf="!gameStarted">
-    <button (click)="startGame()">Comenzar Juego</button>
+    <button (click)="startGame()" class="welcome-button">Comenzar Juego</button>
   </div>
   <div *ngIf="gameStarted">
-    <h2>Pregunta {{ currentQuestionIndex + 1 }} de {{ questions.length }}</h2>
-    <p>{{ currentQuestion.text }}</p>
-    @for (option of currentQuestion.options; track option; let i = $index) {
-      <button (click)="checkAnswer(option)">{{ option }}</button>
-    }
+    <h2 class="quantity-title">
+      Pregunta {{ currentQuestionIndex + 1 }} de {{ questions.length }}
+    </h2>
+    <p class="question-title">{{ currentQuestion.text }}</p>
+    <div class="option-button-container">
+      <button
+        *ngFor="let option of currentQuestion.options; let i = index"
+        class="option-button"
+        (click)="checkAnswer(option)"
+        [ngClass]="{'correct': isCorrect && option === currentQuestion.correctAnswer, 'incorrect': !isCorrect && option === selectedOption, 'selected': option === selectedOption}"
+      >
+        {{ option }}
+      </button>
+    </div>
     <div *ngIf="showResult">
-      <p [ngClass]="{ 'correct': isCorrect, 'incorrect': !isCorrect }">{{ resultMessage }}</p>
-      <button (click)="nextQuestion()">Siguiente Pregunta</button>
+      <p class="response-title">{{ resultMessage }}</p>
+      <p *ngIf="showResponse">{{ currentQuestion.response }}</p>
+      <button
+        *ngIf="isCorrect && currentQuestionIndex + 1 !== questions.length"
+        (click)="nextQuestion()"
+        class="result-button"
+      >
+        Siguiente
+      </button>
+      <button
+        *ngIf="isCorrect && currentQuestionIndex + 1 == questions.length"
+        (click)="nextQuestion()"
+        class="result-button"
+      >
+        Finalizar
+      </button>
     </div>
   </div>
 </div>
